fixed file spacing

--- a/app/scss/_filesPage.scss
+++ b/app/scss/_filesPage.scss
@@ -6,11 +6,13 @@
 
 .client-filesPage-container {
 display: inline-block;
+margin-right: .5rem;
 }
 
 .folder-filesPage-container {
 display: inline-block;
 margin-right: .5rem;
+margin-left: .5rem;
 
 }
 
